--- a/arch/x86/virt/vmx/tdx/Makefile
+++ b/arch/x86/virt/vmx/tdx/Makefile
@@ -2,3 +2,4 @@
 obj-$(CONFIG_INTEL_TDX_HOST)	+= tdx.o seamcall.o
 obj-$(CONFIG_INTEL_TDX_HOST_DEBUG)	+= tdx_debug.o
 obj-$(CONFIG_INTEL_TDX_MODULE_LOADER_OLD) += tdx_module_loader_old/
+obj-$(CONFIG_INTEL_TDX_HOST_OLD)	+= tdx-old.o
