--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4551,7 +4551,7 @@
                 }
             ],
             "description": "TDX KVM support",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Isaku Yamahata",
