manifest_in.json: Disable kvm_lbr_cet branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4490,7 +4490,7 @@
                 }
             ],
             "description": "KVM: Arch LBR and CET features",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [],
             "jira": "NEXT-2994",
             "name": "kvm_lbr_cet",
