manifest_in.json: Disable GNR_SRF branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4511,7 +4511,7 @@
                 }
             ],
             "description": "Add New GNR/SRF Instructions",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Jiaxi Chen",
