--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -1336,15 +1336,20 @@ config MICROCODE_AMD
 	  processors will be enabled.
 
 config MICROCODE_LATE_LOADING
-	bool "Late microcode loading (DANGEROUS)"
-	default n
+	bool "Late microcode loading"
+	default y
 	depends on MICROCODE
 	help
 	  Loading microcode late, when the system is up and executing instructions
 	  is a tricky business and should be avoided if possible. Just the sequence
 	  of synchronizing all cores and SMT threads is one fragile dance which does
 	  not guarantee that cores might not softlock after the loading. Therefore,
-	  use this at your own risk. Late loading taints the kernel too.
+	  use this at your own risk. Intel has added a meta-data to
+	  indicate the required minimum revision must be before
+	  late-loading a patch. For implementations that don't support
+	  such meta-data indication, late loading is effectively blocked
+	  by the kernel. Implementations that don't support such indication
+	  via meta-data will end up tainting the kernel.
 
 config X86_MSR
 	tristate "/dev/cpu/*/msr - Model-specific register support"
