manifest_in.json: Remove stuck-at ref from tdx_guest branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -4609,7 +4609,7 @@
                 }
             ],
             "status": "public",
-            "stuck_at_ref": "dc4c40e6f8f5b46de00065620bb088525e5f813e",
+            "stuck_at_ref": "",
             "last_enabled": "v5.19"
         },
         {
