--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -42,6 +42,10 @@
                 {
                     "name": "CONFIG_VFIO_DEVICE_IDXD",
                     "value": "m"
+                },
+                {
+                    "name": "CONFIG_INTEL_RAPL_TPMI",
+                    "value": "m"
                 }
             ],
             "contributor": [
