manifest_in.json: Add CONFIG_INTEL_TDX_MODULE_LOADER_OLD config flag

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -46,6 +46,10 @@
                 {
                     "name": "CONFIG_INTEL_RAPL_TPMI",
                     "value": "m"
+                },
+                {
+                    "name": "CONFIG_INTEL_TDX_MODULE_LOADER_OLD",
+                    "value": "y"
                 }
             ],
             "contributor": [
