--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -1951,7 +1951,7 @@ config INTEL_TDX_HOST
 	default n
 	depends on CPU_SUP_INTEL
 	depends on X86_64
-	depends on KVM_INTEL
+	depends on KVM_INTEL || SVOS
 	depends on CONTIG_ALLOC
 	select ARCH_KEEP_MEMBLOCK
 	help
