--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -128,6 +128,19 @@ config PCI_LOCKLESS_CONFIG
 config PCI_BRIDGE_EMUL
 	bool
 
+config PCI_TDISP
+	bool "PCI TDISP support"
+	depends on KVM
+	select PCI_DOE
+	select SPDM_MGR
+	help
+	  Trusted Execution Environment (TEE) Device Interface Security Protocol
+	  defines the secure method to attach/detach TEE Device Interface (TDI)
+	  to/from TEE VMs. Select this option if you want to enable TDISP
+	  support from PCIe Device side.
+
+	  If unsure, say N.
+
 config PCI_IOV
 	bool "PCI IOV support"
 	select PCI_ATS
