gnr.config: enable SPDM_MGR for TDX-IO
SPDM_MGR is needed for TDX-IO

Signed-off-by: Wu Hao <hao.wu@intel.com>

--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -7265,6 +7265,7 @@ CONFIG_R8188EU=m
 # CONFIG_FIELDBUS_DEV is not set
 # CONFIG_QLGE is not set
 # CONFIG_VME_BUS is not set
+CONFIG_SPDM_MGR=y
 # CONFIG_CHROME_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
 CONFIG_SURFACE_PLATFORMS=y
