--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -1926,6 +1926,7 @@ CONFIG_PCI_REALLOC_ENABLE_AUTO=y
 CONFIG_PCI_ATS=y
 CONFIG_PCI_DOE=y
 CONFIG_PCI_LOCKLESS_CONFIG=y
+CONFIG_PCI_TDISP=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
