misc: vdsm: add dummy requester for unit testing
Note: this vdsm_dummy_requester module is for testing ONLY and has
memleak issue. Do NOT use it in production environment.

Be aware that a reboot may solve the abnormal behavior of this module.

Signed-off-by: Zhibin Li <zhibin.li@intel.com>

--- a/drivers/misc/vdsm/Kconfig
+++ b/drivers/misc/vdsm/Kconfig
@@ -10,4 +10,5 @@ config VDSM_KERNEL_STUB
 	  vDSM Kernel Stub for kernel drivers to communicate with the user
 	  space SPDM responder emulator.
 
+source "drivers/misc/vdsm/dummy_requester/Kconfig"
 endmenu
