--- a/drivers/misc/vdsm/Makefile
+++ b/drivers/misc/vdsm/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-$(CONFIG_VDSM_KERNEL_STUB) := vdsm.o
+obj-$(CONFIG_VDSM_DUMMY_REQUESTER) += dummy_requester/
 
 vdsm-objs := \
   vdsm_main.o \
