--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -119,6 +119,13 @@ config PCI_ATS
 config PCI_DOE
 	bool
 
+config PCI_IDE
+        bool "PCI IDE support"
+        help
+          Integrity & Data Encryption (IDE) provides confidentiality, integrity,
+	  and replay protection for TLPs Transmitted and Received between two
+	  Ports.
+
 config PCI_ECAM
 	bool
 
@@ -132,6 +139,7 @@ config PCI_TDISP
 	bool "PCI TDISP support"
 	depends on KVM
 	select PCI_DOE
+	select PCI_IDE
 	select SPDM_MGR
 	help
 	  Trusted Execution Environment (TEE) Device Interface Security Protocol
