--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -65,4 +65,5 @@ obj-$(CONFIG_OPEN_DICE)		+= open-dice.o
 obj-$(CONFIG_GP_PCI1XXXX)	+= mchp_pci1xxxx/
 obj-$(CONFIG_VCPU_STALL_DETECTOR)	+= vcpu_stall_detector.o
 obj-$(CONFIG_INTEL_DLB2)        += dlb2/
+obj-$(CONFIG_RPB)		+= rpb.o
 obj-$(CONFIG_VDSM_KERNEL_STUB)	+= vdsm/
