gnr.config: build RPB driver as a module by default
Need RPB driver for TDX-IO, build it as a module

Signed-off-by: Ming Li <ming4.li@intel.com>

--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -2337,6 +2337,7 @@ CONFIG_TIFM_7XX1=m
 # CONFIG_XILINX_SDFEC is not set
 # CONFIG_HISI_HIKEY_USB is not set
 # CONFIG_VCPU_STALL_DETECTOR is not set
+CONFIG_RPB=m
 # CONFIG_C2PORT is not set
 
 #
