gnr.config: add VDSM configuration for TDX-IO
vDSM is needed for TDX-IO

Signed-off-by: Ming Li <ming4.li@intel.com>

--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -2386,6 +2386,18 @@ CONFIG_UACCE=y
 #
 CONFIG_INTEL_DLB2=m
 CONFIG_INTEL_DLB2_DATAPATH=y
+
+#
+# vDSM Kernel Stub
+#
+CONFIG_VDSM_KERNEL_STUB=y
+
+#
+# vDSM Dummy Requester
+#
+CONFIG_VDSM_DUMMY_REQUESTER=m
+# end of vDSM Dummy Requester
+# end of vDSM Kernel Stub
 # end of Misc devices
 
 #
