--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -4306,7 +4306,7 @@ CONFIG_PROC_THERMAL_MMIO_RAPL=m
 
 # CONFIG_INTEL_BXT_PMIC_THERMAL is not set
 CONFIG_INTEL_PCH_THERMAL=y
-# CONFIG_INTEL_TCC_COOLING is not set
+CONFIG_INTEL_TCC_COOLING=m
 CONFIG_INTEL_MENLOW=m
 CONFIG_INTEL_HFI_THERMAL=y
 # end of Intel thermal drivers
