gnr.config: update for TDX 1.0, TDX 1.5, TDX guest
Branch: tdx_kvm_support https://github.com/intel-innersource/virtualization.hypervisors.tdx.linux.git intel-next
CONFIG_KVM_INTEL_TDX_SEAM_BACKDOOR=y
CONFIG_INTEL_TDX_HOST=y
Branch: tdx_guest https://github.com/intel/tdx.git guest-next
CONFIG_INTEL_TDX_GUEST=y
CONFIG_VIRT_DRIVERS=y
CONFIG_TDX_GUEST_DRIVER=m
Branch: kvm_tdx_1_5 https://github.com/intel-sandbox/cqiang-tdx-kvm.git for-intel-next
CONFIG_INTEL_TDX_MODULE_UPDATE=y

Signed-off-by: Lijun Pan <lijun.pan@intel.com>

--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -463,7 +463,7 @@ CONFIG_X86_INTEL_TSX_MODE_ON=y
 CONFIG_X86_SGX=y
 CONFIG_X86_USER_SHADOW_STACK=y
 CONFIG_INTEL_TDX_HOST=y
-# CONFIG_INTEL_TDX_MODULE_UPDATE is not set
+CONFIG_INTEL_TDX_MODULE_UPDATE=y
 # CONFIG_INTEL_TDX_HOST_DEBUG_MEMORY_CORRUPT is not set
 # CONFIG_INTEL_TDX_HOST_OLD is not set
 CONFIG_INTEL_TDX_HOST_DEBUG=m
@@ -726,6 +726,7 @@ CONFIG_KVM_XFER_TO_GUEST_WORK=y
 CONFIG_HAVE_KVM_PM_NOTIFIER=y
 CONFIG_KVM_GENERIC_HARDWARE_ENABLING=y
 CONFIG_HAVE_KVM_RESTRICTED_MEM=y
+CONFIG_HAVE_KVM_FIRMWARE=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=m
 CONFIG_KVM_WERROR=y
@@ -7153,7 +7154,13 @@ CONFIG_VFIO_PCI_IGD=y
 CONFIG_VFIO_MDEV=y
 CONFIG_VFIO_DEVICE_IDXD=m
 CONFIG_IRQ_BYPASS_MANAGER=y
-# CONFIG_VIRT_DRIVERS is not set
+CONFIG_VIRT_DRIVERS=y
+CONFIG_VMGENID=y
+# CONFIG_VBOXGUEST is not set
+# CONFIG_NITRO_ENCLAVES is not set
+# CONFIG_ACRN_HSM is not set
+# CONFIG_EFI_SECRET is not set
+CONFIG_TDX_GUEST_DRIVER=m
 CONFIG_VIRTIO_ANCHOR=y
 CONFIG_VIRTIO=y
 CONFIG_VIRTIO_PCI_LIB=y
