gnr.config: update for post-copy migration
CONFIG_USERFAULTFD=y

Signed-off-by: Lijun Pan <lijun.pan@intel.com>

--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -1117,7 +1117,10 @@ CONFIG_MAPPING_DIRTY_HELPERS=y
 CONFIG_SECRETMEM=y
 CONFIG_RESTRICTEDMEM=y
 # CONFIG_ANON_VMA_NAME is not set
-# CONFIG_USERFAULTFD is not set
+CONFIG_USERFAULTFD=y
+CONFIG_HAVE_ARCH_USERFAULTFD_WP=y
+CONFIG_HAVE_ARCH_USERFAULTFD_MINOR=y
+CONFIG_PTE_MARKER_UFFD_WP=y
 # CONFIG_LRU_GEN is not set
 
 #
