--- a/arch/x86/configs/gnr.config
+++ b/arch/x86/configs/gnr.config
@@ -7139,9 +7139,7 @@ CONFIG_UIO_PCI_GENERIC=m
 CONFIG_VFIO=y
 CONFIG_VFIO_ENABLE_GROUP=y
 CONFIG_VFIO_GROUP=y
-CONFIG_VFIO_CONTAINER=y
-CONFIG_VFIO_IOMMU_TYPE1=y
-CONFIG_VFIO_NOIOMMU=y
+# CONFIG_VFIO_CONTAINER is not set
 CONFIG_VFIO_VIRQFD=y
 CONFIG_VFIO_IMS=y
 CONFIG_VFIO_PCI_CORE=m
@@ -7461,6 +7459,7 @@ CONFIG_INTEL_IOMMU_FLOPPY_WA=y
 CONFIG_INTEL_IOMMU_SCALABLE_MODE_DEFAULT_ON=y
 CONFIG_INTEL_IOMMU_PERF_EVENTS=y
 CONFIG_IOMMUFD=y
+CONFIG_IOMMUFD_VFIO_CONTAINER=y
 CONFIG_IRQ_REMAP=y
 CONFIG_HYPERV_IOMMU=y
 # CONFIG_VIRTIO_IOMMU is not set
